// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount/> matches snapshot 1`] = `
<CartCount__AnimatedStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="4"
      timeout={
        Object {
          "enter": 600,
          "exit": 600,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__Dot>
        4
      </CartCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimatedStyles>
`;

exports[`<CartCount/> updates via props 1`] = `
<CartCount__AnimatedStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="4"
      timeout={
        Object {
          "enter": 600,
          "exit": 600,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__Dot>
        4
      </CartCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimatedStyles>
`;

exports[`<CartCount/> updates via props 2`] = `
<CartCount__AnimatedStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="7"
      timeout={
        Object {
          "enter": 600,
          "exit": 600,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__Dot>
        7
      </CartCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimatedStyles>
`;
